fixed a layout problem

--- a/flip/static/css/style.css
+++ b/flip/static/css/style.css
@@ -166,7 +166,3 @@ div.outcome {
 .form-group {
     clear: both;
 }
-/* some fix */
-#container #middle_port {
-    width: auto;
-}
